fix partition overflow bug (sort-of)

--- a/services/editor/src/components/JPadFullEditor/JPadVisualEditor/Matcher/Properties/styles.less
+++ b/services/editor/src/components/JPadFullEditor/JPadVisualEditor/Matcher/Properties/styles.less
@@ -161,5 +161,11 @@
     right: 25px;
     z-index: 1;
     .transitioned();
+    i {
+        background-image: url('../../../../../resources/alert-icon.svg');
+        width: 16px;
+        height: 16px;
+        display: inline-block;
+    }
   }
 }
